Fixed example and documentation

--- a/snap-copy-config.json.example
+++ b/snap-copy-config.json.example
@@ -7,7 +7,7 @@
         "sendOnSuccess" : false,
         "sendOnFailure" : true,
         "smtpServer" : "mail.server.com",
-        "sender" : "Name <email@address.com",
+        "sender" : "Name <email@address.com>",
         "recipients" : "email@address.com,email2@address.com",
         "subject" : "Snap-Copy Results on server.com"
     }
