Added sync64 and flush cache commands

--- a/snap-copy-config.json.example
+++ b/snap-copy-config.json.example
@@ -3,6 +3,7 @@
     "sourceDrive": "C:",
     "sourcePath": "LocalFolder\\local", 
     "maxShadowCopies": 0,
+    "syncDrive": "D:",
     "mail" : {
         "sendOnSuccess" : false,
         "sendOnFailure" : true,
